kubernetes/deployment2.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-python-service
spec:
  selector:
    app: test-python
  ports:
  - protocol: "TCP"
    port: 6001
    targetPort: 5001
  type: NodePort


---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: test-python
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: test-python
    spec:
      containers:
      - name: test-python
        image: gabor77/test-python:v1
        ports:
        - containerPort: 5001
