kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-python
spec:
  rules:
    - host: hello.dmontest.ee
      http:
        paths:
          - path: /
            backend:
              serviceName: hello-python-service
              servicePort: 6000
